# assette-ai-plugin

./: README.md
.claude-plugin/: marketplace.json  plugin.json
shim/: README.md  pyproject.toml
shim/assette_mcp_shim/: __init__.py
shim/assette_mcp_shim/runtime/: __init__.py  locations.py
shim/assette_mcp_shim/scripts/: __init__.py  pptx_add_table_slide.py  pptx_extract_tags.py  read_cache.py  smartpage_decode_pptx.py  wipe_tenant_caches.py
skills/assette-plugin/: SKILL.md
